# build examples for sphere calculation

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/release)

#if(NOT CMAKE_BUILD_TYPE)
#  set(CMAKE_BUILD_TYPE "Release")
#  message(STATUS "Build type not specified: Use Release by default")
#  set(LIBDIR ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Release) 
#else() 
#  message(STATUS "Build type is set to Debug")
#set(LIBDIR ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Debug)
#endif(NOT CMAKE_BUILD_TYPE)

message (STATUS "LIB Library: ${LIBDIR}")
add_executable (sphere "sphere.cpp")
find_library (NAMES goat_maths PATHS ../../lib)
if (WITHOUT_OPENMP) 
	message (STATUS "OpenMP support skipped due to parameter \"WITHOUT_OPENMP\"")
         find_library (NAMES goat_raytracing PATHS ../../lib)
        target_link_libraries (sphere goat_raytracing goat_maths)
else()
	find_package(OpenMP)
	if (OPENMP_FOUND)
 		message (STATUS "OpenMP found")
                find_library (NAMES goat_raytracing_mp PATHS ../../lib)
	        target_compile_options (sphere PUBLIC ${OpenMP_CXX_FLAGS})
	        target_link_libraries (sphere goat_raytracing_mp goat_maths OpenMP::OpenMP_CXX)
	else()
		message (WARNING "OpenMP not found - Calculation without parallelization")
                find_library (NAMES goat_raytracing PATHS ../../lib)
	        target_link_libraries (sphere goat_raytracing goat_maths)
                
	endif()
endif()

target_include_directories (sphere PUBLIC ${CMAKE_CURRENT_SOURCE} ../../maths ../../raytracing)
goat_install (TARGETS sphere)
